{
    "name": "CustomConsole_ActionMap",
    "maps": [
        {
            "name": "CustomConsole",
            "id": "3d2d053a-d8da-4d88-b051-dd0509614eef",
            "actions": [
                {
                    "name": "ToggleWindow",
                    "type": "Button",
                    "id": "b9a570ee-4916-4138-916a-a4b831e96565",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09a7df99-5aff-451a-89b6-c18cef088538",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleWindow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}